                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2020-09-24
 * Added "fulltextquery" as a key in Rest named_options. Use it instead of "queryable" to perform a MySQL MATCH() AGAINST() fulltext instead of a typical LIKE substring search. Note that you'll need a fulltext index for that field in order to use this option. 
 * Converted ideas to fulltext search.
 * Converted wing class --add to make the "name" field a fulltext index by default.

2020-09-21
 * Changed check_privilege_method to log on debug instead of warn.
 * Rest claasses no longer do full text searches as they simply don't scale due to full table scans.

2020-09-16
 * Minor change to Wing::DB::Result->check_privilege_method so that it returns a 1 instead of the result of the called method if it passes it's checks. It's just checking for truthiness not specfically a 1.

2020-09-13
 * Markdown editor goes into readonly mode while saving.
 * Markdwon editor scrolls to same line number + 5 after saving.
 * Fixed bug in parsing MySQL date times in tgc.vue.js as it was not using UTC.

2020-09-10
 * Fix static id bug by wrapping id default in function.

2020-09-05
 * Added <markdown-editor> component to wing.vue.js.
 * Added <date-time> component to wing.vue.js.

2020-09-02
 * Added 'WingBot' to user agent string of ContenFilter.

2020-09-01
 * Web Filtered Fields should not allow null.

2020-08-29
 * Refactored the <toggle> component.
 * Added wing.generate_id().

2020-08-26
 * Modernized the template_class templates.

2020-08-21
 * Added toggle switch component to wing.vue.js.
 * JSON fields now assume a non JSON string is a single element array as it's more useful than assuming it's an error.