@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-09-25
+ * Fulltext queries generated by Rest generate_relationship are merged into a single query rather than being "OR"ed together.
+
 2020-09-24
  * Added "fulltextquery" as a key in Rest named_options. Use it instead of "queryable" to perform a MySQL MATCH() AGAINST() fulltext instead of a typical LIKE substring search. Note that you'll need a fulltext index for that field in order to use this option. 
  * Converted ideas to fulltext search.
